--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+    
+    
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
