--- a/pom.xml
+++ b/pom.xml
@@ -400,6 +400,31 @@
         </pluginManagement>
       </build>
     </profile>
+    
+     <profile>
+      <!-- When built in OpenShift the 'openshift' profile will be used when
+          invoking mvn. -->
+      <!-- Use this profile for any OpenShift specific customization your app
+          will need. -->
+      <!-- By default that is to put the resulting archive into the 'webapps'
+          folder. -->
+      <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+      <id>openshift</id>
+      <build>
+        <finalName>{APP_NAME}</finalName>
+        <plugins>
+          <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>4.1.1</version>
+            <configuration>
+              <outputDirectory>webapps</outputDirectory>
+              <warName>ROOT</warName>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    
   </profiles>
 
 </project>
