add profile for repackage

--- a/pom.xml
+++ b/pom.xml
@@ -416,9 +416,23 @@
         </pluginManagement>
       </build>
     </profile>
-    
+   
+    <profile>
+      <id>default</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <skip.repackage>false</skip.repackage>
+      </properties>
+    </profile>
+    <profile>
+      <id>prod</id>
+      <properties>
+        <skip.repackage>true</skip.repackage>
+      </properties>
+    </profile>
      
-    
   </profiles>
 
 </project>
