return to the first

--- a/pom.xml
+++ b/pom.xml
@@ -26,19 +26,6 @@
     <jacoco.version>0.8.7</jacoco.version>
     <nohttp-checkstyle.version>0.0.10</nohttp-checkstyle.version>
     <spring-format.version>0.0.31</spring-format.version>
-<!--new  add-->
-    <webjars-bootstrap.version>3.3.6</webjars-bootstrap.version>
-    <webjars-jquery-ui.version>1.12.1</webjars-jquery-ui.version>
-    <webjars-jquery.version>3.5.1</webjars-jquery.version>
-    <wro4j.version>1.8.0</wro4j.version> <!-- wro4j 1.0.0 requires Java 9 -->
-
-    <!-- Java EE / Java SE dependencies -->
-    <tomcat.version>9.0.46</tomcat.version>
-    <jaxb-api.version>2.3.1</jaxb-api.version>
-    <jaxb-runtime.version>2.3.4</jaxb-runtime.version>
-    <javax-activation.version>1.2.0</javax-activation.version>
-    <servlet-api.version>4.0.4</servlet-api.version>
-    <taglibs-standard.version>1.2.5</taglibs-standard.version>
 
   </properties>
 
@@ -105,6 +92,7 @@
     <dependency>
       <groupId>org.webjars.npm</groupId>
       <artifactId>bootstrap</artifactId>
+      <version>${webjars-bootstrap.version}</version>
     </dependency>
     <dependency>
       <groupId>org.webjars.npm</groupId>
