--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,16 @@
 
   <dependencies>
     <!-- Spring and Spring Boot dependencies -->
+    <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat -->
+    <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat -->
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat</artifactId>
+      <version>8.5.85</version>
+      <type>pom</type>
+    </dependency>
+
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
