--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,5 @@ logging.level.org.springframework=INFO
 
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
-server.servlet.contextPath=/spring-petclinic
+#server.servlet.contextPath=/spring-petclinic
+spring.profiles.active=postgres
